--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,21 @@
 body{ 
-    background-image: url("/img/0344.png"); /*Försöker här att länka in en bankgrundsbild, detta funkar ej.*/
+   background-image: url("../img/0344.png"); /*Försöker här att länka in en bankgrundsbild, detta funkar ej.*/
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     font-family: montserrat;
-    height: 50000px;
 }
 .navbaren{
-	background-color: rgba(0, 0, 0, 0.5); /*försök att få lite genomsknlig header*/
+	background-color: rgba(0, 0, 0, 0.75); /*försök att få lite genomsknlig header*/
 }
 .text2{
 	font-size: x-large;
+}
+.text3{
+	color: 
+}
+.menystor{
+	margin-left: 125px;
+	margin-right: 125px;
 }
