--- a/Slutprojekt-Kalle-main/css/style.css
+++ b/Slutprojekt-Kalle-main/css/style.css
@@ -43,7 +43,6 @@ body{
   position: relative;
   width: 100%;
   height: 100%;
-  width: 100%;
 }
 
 .video {
@@ -66,4 +65,11 @@ body{
  .marginabout{
  	margin-top: 30px;
  	margin-bottom: 15px;
+ }
+
+ /*css för curriculum*/
+ .curriculumcontainer{
+ 	background-color: white;
+ 	padding: 25px;
+ 	margin-bottom: 30px;
  }
