--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,13 @@ body{
 	font-size: large;
 }
 }
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;/*gör så alternativet blir understryket */
+}
 
 /*css för index*/
 .paddingindex{
@@ -46,11 +53,7 @@ body{
     color: black;
     height: 330px;
  }
- /*.test{
- 	margin-left: auto;
- 	margin-right: auto;
- }
- */
+ 
  .video-container {
  width: 100%;
   height: 100%;
@@ -79,6 +82,36 @@ body{
  /*css för curriculum*/
  .curriculumcontainer{
  	background-color: white;
- 	padding: 25px;
+ 	padding: 30px;
  	margin-bottom: 30px;
+ }
+
+ /*css för find-us*/
+.paddingfind{
+	padding-top: 45px;
+	padding-bottom: 10px;
+}
+ .boxfind{
+    background-color: white;
+    color: black;
+    height: 700px;
+    padding: 20px;
+ }
+ .paddingcontact{
+ 	padding-top: 20px;
+ 	padding-bottom: 5px;
+ }
+ .paddinglogo{
+ 	padding-right: 15px;
+ }
+
+
+ /*css för apply*/
+ .paddingaplly{
+ 	padding: 15px;
+ }
+
+ .boxapply{
+ 	background-color: white;
+ 	height: 800px;
  }
