--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,8 @@ a:hover {
 .paddingaplly{
 	padding-top: 15px;
 	padding-bottom: 15px;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 
 .boxapply{
